try solve layout problem with small-icon overlapping

--- a/src/mobile-version/style/small-icon-button.css
+++ b/src/mobile-version/style/small-icon-button.css
@@ -3,7 +3,7 @@
     color:inherit;
     border-radius: 4px;
     border: 1px solid #bbb;
-    padding: 3px 3px 3px 3px;
+    padding: 2px 2px 2px 2px;
 }
 
 .small-icon-button:hover,
