--- a/src/mobile-version/style/small-text-button.css
+++ b/src/mobile-version/style/small-text-button.css
@@ -3,5 +3,5 @@
     color:inherit;
     border-radius: 4px;
     border: 1px solid #bbb;
-    padding: 3px 3px 3px 3px;
+    padding: 2px 2px 2px 2px;
 }
